--- a/res/layout/board_list_elem.xml
+++ b/res/layout/board_list_elem.xml
@@ -14,6 +14,13 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gravity="center_horizontal"    
+    >
 <TableLayout android:id="@+id/PositionElemTable" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
@@ -35,11 +42,7 @@
             android:padding="3dip"
             android:textColor="@color/text_color" 
             />
-        <TextView
-         android:id="@+id/board_elem_date"
-         android:layout_width="fill_parent"
-   	     android:layout_height="wrap_content" 
-     	 android:textColor="@color/text_color" />
+        
     </TableRow>
 	<TableRow>
         <TextView
@@ -55,3 +58,4 @@
     </TableRow>
 
 </TableLayout>
+</LinearLayout>
