--- a/res/layout/checkers_game_layout.xml
+++ b/res/layout/checkers_game_layout.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright 2011 Federico Paolinelli
   
@@ -14,26 +14,25 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent">
-	<LinearLayout
-		android:orientation="vertical"
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content">
-	
-	
-		<LinearLayout
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+ 	xmlns:app="http://schemas.android.com/apk/res/com.fede.checkers"
+ 	android:layout_width="fill_parent" 
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+        <com.admob.android.ads.AdView  
+          android:id="@+id/ad" 
+          android:layout_width="fill_parent"
+		  android:layout_height="60px"
+          android:layout_alignParentTop="true"
+          app:backgroundColor="#000000"
+          app:primaryTextColor="#FFFFFF"
+          app:secondaryTextColor="#CCCCCC"
+          app:keywords="Android game"
+        />
+        <org.anddev.andengine.opengl.view.RenderSurfaceView
+			android:id="@+id/xml_rendersurfaceview" 
 			android:layout_width="fill_parent"
-			android:layout_height="fill_parent"
-			android:background="#FFF"
-			>
-			<org.anddev.andengine.opengl.view.RenderSurfaceView android:id="@+id/rendersurfaceview"
-				android:layout_width="240dip" 
-				android:layout_height="240dip"
-				/>
-		</LinearLayout>
-	
-		<!--  TODO Place ads here -->
-	 </LinearLayout>
-</ScrollView>
+		  	android:layout_height="fill_parent" />
+
+</LinearLayout>
