--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -19,8 +19,8 @@
 <color name="gold">#FFD700</color>
 <color name="pale_green">#80ACF46A</color>
 <color name="transparent">#00000000</color>
-
-
+<color name="white">#FFFFFF</color>
+<color name="light_grey">#E0E0E0</color>
 <color name="medium_blue">#0000CD</color>
 	
 
