--- a/res/layout/board_list.xml
+++ b/res/layout/board_list.xml
@@ -21,6 +21,10 @@
     android:gravity="center_horizontal"
     style="@style/BoardList"    
     >
+    <Button android:text="Scoreloop" 
+android:id="@+id/scoreloop_button" 
+android:layout_width="wrap_content" 
+android:layout_height="wrap_content"></Button>
 <ListView android:id="@android:id/list" 
 		android:layout_width="fill_parent" 
 		android:layout_height="fill_parent"
@@ -29,6 +33,7 @@
 		android:cacheColorHint="#00000000"
 		>
 </ListView>
+
 </LinearLayout>
 
 
