--- a/res/values/modes.xml
+++ b/res/values/modes.xml
@@ -12,6 +12,14 @@
 		<item>Germany Timed</item>
 		<item>Asymmetrical Timed</item>
 		<item>Diamond Timed</item>
+		<item>Small Diamond Timed</item>
+		<item>Six by Six Timed</item>
+		<item>Wieglebs Timed</item>
+		<item>Nine by nine Timed</item>
+		<item>Simple Cross 2 Timed</item>
+		<item>Simple Cross 3 Timed</item>
+		<item>Hole Mushroom Timed</item>
+		<item>Simple Cross 1 Timed</item>
 	</string-array>
 		
 </resources>
