--- a/res/layout/board_list.xml
+++ b/res/layout/board_list.xml
@@ -15,7 +15,7 @@
   limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"	
-	xmlns:ads="http://schemas.android.com/apk/res/com.whiterabbit.checkers"
+	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
 	
 
     android:orientation="vertical"
