--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -37,30 +37,33 @@
   </style>
   
   <style name="ResultTitle">
-  	<item name="android:layout_width">wrap_content</item>
+  	<item name="android:layout_width">fill_parent</item>
   	<item name="android:layout_height">wrap_content</item>
-  	<item name="android:layout_gravity">center_horizontal</item>
-  	<item name="android:textSize">36dip</item>
-	<item name="android:textColor">@color/light_grey</item>    
+  	<item name="android:gravity">center_horizontal</item>
+  	<item name="android:textSize">24dip</item>
+	<item name="android:textColor">@color/light_grey</item>  
+	<item name="android:background">@drawable/riquadroc</item>
+	<item name="android:textStyle">bold</item>
+	<item name="android:padding">12dip</item>
   </style>
 
   <style name="ResultMessage">
-  	<item name="android:layout_width">wrap_content</item>
+  	<item name="android:layout_width">fill_parent</item>
   	<item name="android:layout_height">wrap_content</item>
   	<item name="android:layout_gravity">center_horizontal</item>
-  	<item name="android:textSize">24dip</item>
-  	<item name="android:paddingLeft">12dip</item>
-  	<item name="android:paddingRight">12dip</item>
-	<item name="android:textColor">@color/light_grey</item>    
+  	<item name="android:textSize">18dip</item>
+	<item name="android:textColor">@color/light_grey</item>
+	<item name="android:background">@drawable/riquadroa</item>
+	<item name="android:padding">12dip</item>    
   </style>  
   
   <style name="ResultView">
   	<item name="android:background">@drawable/back</item>	
-  	<item name="android:gravity">center</item>  	
   </style>
   
   <style name="ResultButtons">
 	<item name="android:gravity">bottom</item>
+	<item name="android:paddingBottom">20dip</item>
   </style>
   
   <style name="ResultDescription">
@@ -74,10 +77,20 @@
   	<item name="android:textSize">12dip</item>
 	<item name="android:textColor">@color/light_grey</item>
     <item name="android:layout_height">wrap_content</item>
-    <item name="android:textStyle">bold</item>
-    
+    <item name="android:textStyle">bold</item>   
     <item name="android:background">@null</item>
-  </style>  
+  </style>
+  
+  <style name="ResultButtonSingle">
+  	<item name="android:layout_gravity">center</item>
+  	<item name="android:gravity">center</item>
+  	<item name="android:textSize">12dip</item>
+	<item name="android:textColor">@color/light_grey</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_width">fill_parent</item>
+    <item name="android:textStyle">bold</item>   
+    <item name="android:background">@null</item>
+  </style>    
 
   <style name="ResultButtonEmpty">
   	<item name="android:layout_gravity">center</item>
@@ -86,7 +99,7 @@
   </style>  
 
   <style name="ResultSeparator">
-  	<item name="android:layout_height">12dip</item>
+  	<item name="android:layout_height">8dip</item>
   	<item name="android:background">@null</item>
   	<item name="android:layout_width">wrap_content</item>
   </style>    
