--- a/res/layout/board_list.xml
+++ b/res/layout/board_list.xml
@@ -17,7 +17,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"	
 	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
 	
-
+	android:id="@+id/boardList"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -28,6 +28,7 @@
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          ads:adUnitId="a14d2ccfb20d9cd"
+                         ads:loadAdOnCreate="true"
                          ads:adSize="BANNER"/>                             
 <ListView android:id="@android:id/list" 
 		android:layout_width="fill_parent" 
